[package]
name = "bls"
version = "0.1.0"
authors = ["Doron <doronz@kzen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
curv = { git = "https://github.com/doronz2/curv-1", branch = "bls_tss_adapt", tag = "v0.2.7"}
#curv = { git = "https://github.com/KZen-networks" , tag = "v0.3.4"}
#curv = { path = "/Users/doronz/zengo_libs/curv" }
zeroize = "0.10"
rand = "0.7.3"

[lib]
crate-type = ["lib"]